[metadata]
name = minerva-plotter
version = 0.0.1
author = Darlinne Hubert Palo Soto
author_email = darlinnep@gmail.com
description = A Python class for reducing and visualizing DAGHAR-like datasets 
long_description = file: README.md # case-sensitive
long_description_content_type = text/markdown
url = https://github.com/HubertPalo/minerva-plotter
project_urls =
    Bug Tracker = https://github.com/HubertPalo/minerva-plotter/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Visualization

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src